--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "darkaonline/swagger-lume",
+  "name": "binbinly/swagger-lume",
   "description": "OpenApi or Swagger integration to Lumen",
   "keywords": [
     "lumen",
@@ -21,9 +21,9 @@
   ],
   "require": {
     "php": ">=7.2 || ^8.0",
-    "laravel/lumen-framework": "~6.0 || ~7.0 || ^8.0 || ^9.0",
-    "zircote/swagger-php": "~2.0 || 3.*",
-    "swagger-api/swagger-ui": "^3.0"
+    "laravel/lumen-framework": "^9.0",
+    "zircote/swagger-php": "^4.0",
+    "swagger-api/swagger-ui": "^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*",
